# ifmo-labs

android/Hekko/gradle/wrapper/: gradle-wrapper.properties
android/lab2/: build.gradle.kts
android/lab2/src/main/kotlin/lab2/: App.kt  Task10.kt  Task2.kt  Task3.kt  Task6.kt  Task8.kt  Task9.kt
android/lab2/src/test/kotlin/lab2/: AppTest.kt
android/lab3/app/: build.gradle
android/lab3/app/src/main/: AndroidManifest.xml
android/lab3/gradle/wrapper/: gradle-wrapper.properties
compilers/c-lab2/: .gitignore  c-lab2.sln
compilers/c-lab2/Application/: Application.csproj  Program.cs  TokenStringify.cs  example1  example2
compilers/c-lab2/Scanner/: Scanner.cs  Table.cs  Token.cs  TokenType.cs
compilers/c-lab2/Scanner.Test/: MultilineCommentRemoverTest.cs  PascalCommentRemoverTest.cs  Scanner.Test.csproj  ScannerTest.cs
compilers/c-lab2/Scanner/prescanner/: BinaryTokenMultilineCommentScannerPreparer.cs  IScannerPreparer.cs  PascalScannerPreparer.cs
compilers/c-lab2/Scanner/tokens/: Begin.cs  CloseParentheses.cs  Comma.cs  Dot.cs  Else.cs  End.cs  Error.cs  Id.cs  If.cs  Num.cs  OpenParentheses.cs  Operation.cs  Var.cs
compilers/c-lab2/Syntax/: Syntax.cs  Syntax.csproj  SyntaxAnalizeTableBinaryTokenOperation.cs
data/: Lesson2.md  format.json
dbms/db-lab2/: .bashrc  tnsnames.ora
dbms/dbms-lab1/: createTable.sql  init.sh  kate.sql  test.sql  tranc.sql
dbms/dbms-lab2/: clean.sh  config.sh  initdb.sql  inits223412.ora  listener.ora  query.sql  sqlnet.ora
dbms/dbms-lab3/: .bashrc  .ssh.sh  connect.sql  create.sh  cron  export.sql  exportdp.sh  initdb.sql  inits223412.ora  networkexport.sh  ssh.pub  test.sql  tnsnames.ora
dbms/dbms-lab3/scripts/: dumpExport.sh  dumpImport.sh  dumpLocalImport.sh  dumpReplication.sh  exp.sh  expReplication.sh  import.sh  list.sh
dbms/dbms-lab4/: asm-clean.sh  asm-install.sh  db-clean.sh  db-install.sh  login.sh  upload.sh
dbms/dbms-lab4/asm/: initASM.223412.ora  initdiskgroup1.sql  initdiskgroup2.sql  initdiskgroup3.sql  initdiskgroup4.sql  step2.sql
dbms/dbms-lab4/db/: .bashrc  initmem.sql  test-asm.sql
dbms/dbms-lab4/scripts/: abort.sqlplus  run-asm-test.sh  run-asm.sh  run-au.sh  run-db.sh  run-list.sh
dbms/dbms-lab4/steps/: step-1.sh  step-2.sh  step-3.sh  step-4.sh  step-5.sh  step-6.sh  step-7.sh  step-8.sh
dbms/lab1/: d.sh  dropTable.sql  final.sql  p.sh  procedure.sql  rollbacktest.sql  s.sh  t.sh
dsa/dsa-lab1/: .gitignore  README.md  generator.go  hashtable.go  main.go  tree.go
dsa/dsa-lab2/: Makefile  main.go
dsa/dsa-lab2/algo/: algo.go  algo_test.go
dsa/dsa-lab2/graph/: graph.go  graph_test.go
dsa/dsa-lab2/proto/: experiment.pb.go
dsa/dsa-lab2/suite/: suite.go
dsa/dsa-lab3/: README.md  experiment.proto  main.go
dsa/dsa-lab3/algo/: algo.go  algo_test.go
dsa/dsa-lab3/graph/: graph.go  graph_test.go
dsa/dsa-lab3/suite/: suite.go
dsa/dsa-lab5/: README.md  main.go
dsa/experiment-plot/: .gitignore  README.md  main.go
mobile/course/: settings.gradle
mobile/course/app/: build.gradle
mobile/course/app/src/main/: AndroidManifest.xml
mobile/course/gradle/wrapper/: gradle-wrapper.properties
mobile/lab5/app/: build.gradle
mobile/lab5/app/src/main/: AndroidManifest.xml
mobile/lab5/gradle/wrapper/: gradle-wrapper.properties
mobile/m-lab1/: .gitignore
mobile/m-lab2/: settings.gradle.kts
mobile/m-lab4.1/app/src/main/: AndroidManifest.xml
mobile/m-lab4/app/: build.gradle
mobile/m-lab4/app/src/main/: AndroidManifest.xml
mobile/m-lab4/gradle/wrapper/: gradle-wrapper.properties
mobile/m-lab5/app/: build.gradle
mobile/m-lab5/app/src/main/: AndroidManifest.xml
mobile/m-lab5/gradle/wrapper/: gradle-wrapper.properties
mobile/m-lab6/: build.gradle
mobile/m-lab6/app/: build.gradle
mobile/m-lab6/app/src/main/: AndroidManifest.xml
mobile/m-lab6/gradle/wrapper/: gradle-wrapper.properties
multithread/: lesson1.md  lesson2.md
multithread/lab/: makefile  task2.c  task4.c
multithread/lab2/: CMakeLists.txt
multithread/mtp-lab/: CMakeLists.txt  task1.c  task3.c
multithread/mtp-lab1/: lab1.sh
multithread/mtp-lab2/: Makefile  lorem  main.c  small
multithread/mtp-lab3/: .gitignore
multithread/mtp-lab3/data-generator/: build.gradle.kts  settings.gradle.kts  test.sh
multithread/mtp-lab3/data-handler/: .gitignore  CMakeLists.txt  Stats.ipynb  algorithm.c  algorithm.h  build.sh  counter.c  counter.h  coverage.sh  main.c  message.c  output.c  output.h  output.txt  queue.c  queue.h  struct.c  struct.h  test.sh
multithread/mtp-lab3/data-handler/include/lab3/: const.h  message.h  output.h  pool.h  queue.h  sorted_list.h  stats.h
multithread/mtp-lab3/data-handler/src/: CMakeLists.txt  algorithm.c  counter.c  main.c  message.c  output.c  pool.c  queue.c  sorted_list.c  stats.c
multithread/mtp-lab3/data-handler/test/: CMakeLists.txt  algorithm.c  algorithm.cpp  algorithm.h  main.c  message.c  message.h  output.c  output.h  pool.c  pool.h  queue.c  queue.cpp  queue.h  sorted_list.c  sorted_list.h  test.c  test.h
multithread/mtp-lab3/jupyter/: Stats.ipynb  stats.csv
software-testing/st-lab1/: .gitignore  settings.gradle.kts
software-testing/st-lab1/app/: build.gradle.kts
software-testing/st-lab1/selenium-ext/: build.gradle.kts
software-testing/st-lab1/test-dsl/: build.gradle.kts
software-testing/st-lab3/: .gitignore  build.gradle.kts  settings.gradle.kts
(+186 files in other folders)
